--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-304.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇨🇳 中国-407.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-507.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-600.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-359.9KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 未知国家-545.9KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-418.3KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.93MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.86MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇯🇵 日本-897.9KB/s(Youtube:不良林), server: jp2.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp2.trojan.tel, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-499.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
+  - {name: 🇭🇰 香港-2.94MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-522.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-600.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 未知国家-545.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
