--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.93MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.86MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇯🇵 日本-897.9KB/s(Youtube:不良林), server: jp2.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp2.trojan.tel, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-499.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
-  - {name: 🇭🇰 香港-2.94MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-522.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-780.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-215.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇸🇬 新加坡-247.4KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
