--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.30MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.11MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-247.4KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-10.09MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.21MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.75MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-216.0KB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-678.4KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-869.2KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.68MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.93MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-490.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-528.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-226.4KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-227.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇫🇷 法国-985.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-247.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-216.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-678.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
